# adv_mla_at3

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
app/: flight_data_fetcher.py  model_catboost.py  model_gb.py  model_tf.py  model_xgb.py  streamlit_app.py
docs/: conf.py
models/ANIKA/: best_xgb_model_reg.joblib  label_encoder.joblib  lgb_default_model.joblib  lgb_tuned_model.joblib  lgb_tuned_model.pkl  standard_scaler.joblib  xgb_default_model.joblib  xgb_tuned_model.joblib
models/Kritika/: exp2_best_model.h5  exp3_best_model.h5  exp4_best_model.h5  label_encoder.joblib  standard_scaler.joblib
models/Sahil/: preprocessor.joblib
models/Varun/: gradient_boosting_model.joblib
notebooks/: Data processing & EDA.ipynb  kotak_sahil_24707592_catboost.ipynb
notebooks/ANIKA/: Anika_Chauhan-14188775-xgboost.ipynb  Chauhan_Anika-14188775-xgboost.ipynb
notebooks/Kritika/: neural_nets1.ipynb  predict_model.ipynb  train_neural_nets.ipynb
notebooks/Kritika/wandb/: latest-run
notebooks/Kritika/wandb/run-20231108_115443-20mtw0zl/: run-20mtw0zl.wandb
notebooks/Kritika/wandb/run-20231108_122410-n6om1qf9/: run-n6om1qf9.wandb
notebooks/Kritika/wandb/run-20231108_123119-o6r8jzhl/: run-o6r8jzhl.wandb
notebooks/Sahil/: kotak_sahil_24707592_catboost.ipynb
notebooks/Sahil/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/Varun/: EDA.ipynb  Gradient_Boost_Model.ipynb  chhetri_varun_24711703_gradient_boost.ipynb
reports/: Meeting minutes.docx
src/features/: build_features.py
src/models/: train_model.py
(+53 files in other folders)
