[tool.poetry]
name = "adv-mla-at3"
version = "0.1.0"
description = ""
authors = ["Kritz23 <kritz2399@gmail.com>"]
readme = "README.md"
packages = [{include = "adv_mla_at3"}]

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "2.0.1"
scikit-learn = "1.3.1"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
wandb = "^0.16.0"
tensorflow = "2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
