[tool.poetry]
name = "adv-mla-at3"
version = "0.1.0"
description = ""
authors = ["Kritz23 <kritz2399@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
pandas = "2.0.1"
scikit-learn = "1.3.1"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
gdown = "^4.7.1"
isodate = "^0.6.1"
shap = "^0.43.0"
wandb = "^0.16.0"
streamlit = "1.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
